# ChangeLog for app-misc/cl-nettools-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-nettools-meta-11.0-r3 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0-r2.ebuild, +cl-nettools-meta-11.0-r3.ebuild:
  Renamed USE flag to CDISTRO.

*cl-nettools-meta-11.0-r2 (24 Nov 2010)

  24 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0-r1.ebuild, +cl-nettools-meta-11.0-r2.ebuild:
  Removed wicd from CLD

*cl-nettools-meta-11.0-r1 (22 Nov 2010)

  22 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0.ebuild, +cl-nettools-meta-11.0-r1.ebuild:
  daily update

*cl-nettools-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-nettools-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
