@@ -1,3 +1,3 @@
-EBUILD cldx-meta-10.9-r1.ebuild 2433 RMD160 0a0d127c9f3528490815a900bf572943dab06ee3 SHA1 b143eebe114e66f314129c4c24ce5f239f3e92d2 SHA256 f790f62ae43a407a9704ff998e82621df12595d353a8301fb11461cdedc687e7
-MISC ChangeLog 3312 RMD160 4a420baf355d99f2bf53ddb3b51fa828eaa725e2 SHA1 1b6858c8cb307183ae2a1ffd9e865879f64de4d0 SHA256 9d4beab1845b0d65253d450ba77d7c2d8aa46da614c45f27ec6de7711e8a7f86
+EBUILD cldx-meta-10.9-r2.ebuild 2449 RMD160 6b87b80f46dbe7a447e82b3192ecc453e563f464 SHA1 92b8a75f2a2b781bd67e64da7965d148a5c5c4d0 SHA256 691dca1e31194e19e9e5cd8894c5242251aabe39b243a3c879030acf975494fd
+MISC ChangeLog 3500 RMD160 7a6eb201c73f929f07f92604e51c03ed7d1049fd SHA1 6e569dcd697eba3be5c9d709731268d2f1e5fb95 SHA256 183fb60d984c8b1bac6e4f566bb6f53340fdd07ec7be2e6e30e5cf9e9feace92
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
