@@ -25,7 +25,6 @@
 
 ~app-admin/system-config-printer-common-1.2.2 amd64 x86
 ~app-misc/hal-cups-utils-0.6.19 amd64 x86
-~dev-libs/liblinebreak-1.0 amd64 x86
 ~media-video/kdenlive-0.7.7.1 amd64 x86
 ~net-p2p/eiskaltdc-1.0.30 amd64 x86
 =net-p2p/eiskaltdc-1.0.40_rc1 amd64 x86
