@@ -1,9 +1,3 @@
-~dev-libs/liblinebreak-1.0 amd64 x86
-~gnome-extra/nm-applet-0.8.1 amd64 x86
-~net-misc/mobile-broadband-provider-info-20100122 x86 amd64
-~net-misc/modemmanager-0.3 amd64 x86
-~net-wireless/blueman-1.21 amd64 x86
-
 ~dev-python/compizconfig-python-0.8.4 amd64 x86
 ~x11-apps/fusion-icon-0.1 amd64 x86
 ~x11-apps/ccsm-0.8.4 amd64 x86
