@@ -4,7 +4,6 @@ net-print/gutenprint gimp
 dev-libs/pwlib ldap
 gnome-base/gvfs archive fuse gdu
 gnome-extra/nm-applet -bluetooth
-net-wireless/blueman network
 sys-fs/udev extras
 sys-block/gparted dmraid fat jfs ntfs reiserfs xfs
 gnome-base/gnome-applets gstreamer
