@@ -1,2 +1,1 @@
-~dev-libs/liblinebreak-1.0 amd64 x86
 ~sys-auth/thinkfinger-0.3 amd64 x86
