@@ -35,7 +35,10 @@ media-video/nvidia-settings amd64 x86
 ~net-misc/networkmanager-openvpn-0.8.2 amd64 x86
 ~net-misc/networkmanager-pptp-0.8.2 amd64 x86
 ~net-misc/networkmanager-vpnc-0.8.2 amd64 x86
+~gnome-extra/nm-applet-0.8.2 amd64 x86
 ~net-dialup/ppp-2.4.5 amd64 x86
+~dev-libs/liblinebreak-1.0 amd64 x86
+~net-wireless/blueman-1.21 amd64 x86
 
 ~net-im/skype-2.1.0.81 amd64 x86
 
