@@ -15,6 +15,7 @@ media-video/realplayer -X
 media-video/transcode mjpeg
 media-video/xine-ui -X
 net-analyzer/nmap -gtk
+net-wireless/blueman network
 www-client/firefox bindist custom-optimization
 media-gfx/ufraw gimp
 media-libs/libsdl custom-cflags
