@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldx-meta-10.9-r2 (27 Nov 2010)
+
+  27 Nov 2010; Трацевский Александр
+  <atratsevskiy@gentoo.org> -cldx-meta-10.9-r1.ebuild,
+  +cldx-meta-10.9-r2.ebuild:
+  Remove wicd
+
 *cldx-meta-10.9-r1 (17 Nov 2010)
 
   17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
