@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-nettools-meta-11.0-r4 (27 Nov 2010)
+
+  27 Nov 2010; Трацевский Александр
+  <atratsevskiy@gentoo.org> -cl-nettools-meta-11.0-r3.ebuild,
+  +cl-nettools-meta-11.0-r4.ebuild:
+  Set NetworkManager for CLDX
+
 *cl-nettools-meta-11.0-r3 (25 Nov 2010)
 
   25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
